Fixed input-search styling in collapsed menu

--- a/src/WebComponents/InputSearch/input-search.scss
+++ b/src/WebComponents/InputSearch/input-search.scss
@@ -59,12 +59,4 @@
             @apply(--vi-input-search-input-focused-button);
         }
     }
-
-    &[collapsed] {
-        vi-popup {
-            @include flex();
-        }
-
-        @apply(--vi-input-search-collapsed);
-    }
 }
